# notebooks

./: pyproject.toml
notebooks/: first.ipynb
notebooks/.ipynb_checkpoints/: first-checkpoint.ipynb
