[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Mathieu Leduc-Hamel <mathieu.leduc-hamel@nasdaq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
datasets = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
